--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,14 @@ EDA.ipynb
 iframe_figures/
 model_assets/
 model_assets/*
-# processed_dataset/*
+processed_dataset/*
 
 */.ipynb_checkpoints/*
 .ipynb_checkpoints/*
 
+superceeded_notebooks/*
+submission/*
 */__pycache__/*
 
 sketches-kh.ipynb
+Model Explanability-Copy1.ipynb
